Mon Oct 29 14:59:26 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py: Increase estimate of amount of memory
	  used, based on profiling observations.

Mon Oct 29 14:14:04 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/unittests/spell_correct_1.py: Add unittest
	  demonstrating problem with spelling correction.

Mon Oct 29 14:08:59 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/memutils.py: New file, which gets the total amount of
	  physical memory on the system (for windows and POSIX).
	* xappy/indexerconnection.py: Add set_max_mem_use(), which causes
	  an automatic flush if more than a certain (configurable) amount
	  of memory is used.  This should help to avoid using all the
	  memory for buffered changes, resulting in swapping.  The estimate
	  of the memory used is fairly primitive, though, so could do with
	  improvment.

Mon Oct 29 09:30:21 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Retry parse_query() attempt without
	  support for boolean operators if it fails in spell correct
	  routine, to match behaviour of query_parse() routine.

Fri Oct 12 09:52:31 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: If allow, deny, default_deny or
	  default_allow are passed as empty lists, behave as if they were
	  passed as None.

Wed Oct 10 22:56:19 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Update some documentation comments.

Wed Oct 10 18:21:33 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add the default_op, default_allow, and
	  default_deny optional parameters to spell_correct(), so that it
	  takes the same arguments as query_parse().

Wed Oct 10 01:25:01 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/perftest.py: Remove facet and tags test runs - we don't